--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
 		{
 			list-style: none;
 			text-align:center;
+			font-size:250%;
 		}
 		
 		li
@@ -37,12 +38,13 @@
 		</table>-->
 		<p>
 		<ul>
-			<li><a href="#">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a href="#">About</a></li>
 			<li><a href="#">News</a></li>
 			<li><a href="#">Contact</a></li>
 		</ul>	
 		</p>
+	<p> About Prestige Worldwide</p>
 		
 		
 	</body>
