--- a/about.html
+++ b/about.html
@@ -23,19 +23,14 @@
 			margin-right: 50px;
 			
 		}
+		p
+		{
+			font-size:200%;
+		}
 	</style>
 	<body>
 		
-		<!--<table>
-			<p>
-			<tr>
-				<td><a href="#">Home</a></td>
-				<td><a href="#">News</a></td>
-				<td><a href="#">Weather</a></td>	
-			</tr>
-			</p>
-			
-		</table>-->
+		
 		<p>
 		<ul>
 			<li><a href="index.html">Home</a></li>
@@ -44,7 +39,9 @@
 			<li><a href="#">Contact</a></li>
 		</ul>	
 		</p>
-	<p> About Prestige Worldwide</p>
+	
+			
+			<h1 style="color:black; font-size: 200%; ">Prestige Worldwide Vision for the Future</h1>
 		
 		
 	</body>
