--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
 		</p>
 	
 			
-			<h1 style="color:black; font-size: 200%; ">Prestige Worldwide Vision for the Future</h1>
+			<h1 style="color:black; font-size: 200%; margin-left:50px;">Prestige Worldwide Vision for the Future</h1>
 		
 		
 	</body>
