--- a/about.html
+++ b/about.html
@@ -42,6 +42,14 @@
 	
 			
 			<h1 style="color:black; font-size: 200%; margin-left:50px;">Prestige Worldwide Vision for the Future</h1>
+	
+		<p>
+			Prestige Worldwide, wide, wide, wide. Prestige Worldwide. The first word in entertainment.
+			First word. Management. Financial portfolios. Insurance. Computers. Black leather gloves.
+			Research and development. Putting in the man-hours to study the science of what you need.
+			Last week we put Liquid Paper on a bee......and it died. Security. Security.
+			And... And. Possibly you. Possibly you.
+		</p>
 		
 		
 	</body>
