--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 		}
 		p
 		{
-			font-size:200%;
+			font-size:100%;
 		}
 	</style>
 	<body>
@@ -34,22 +34,26 @@
 		<p>
 		<ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">News</a></li>
-			<li><a href="#">Contact</a></li>
+			<li><a href="about.html">About</a></li>
+			<li><a href="news.html">News</a></li>
+			<li><a href="contact.html">Contact</a></li>
 		</ul>	
 		</p>
 	
 			
-			<h1 style="color:black; font-size: 200%; margin-left:50px;">Prestige Worldwide Vision for the Future</h1>
+			<h1 style="color:black; font-size: 200%; margin-left:100px;">Prestige Worldwide Vision for the Future</h1>
 	
 		<p>
+		<p>
+			<img src="./Images/b&d.jpg" style="width: 400px;">
+		</p>
 			Prestige Worldwide, wide, wide, wide. Prestige Worldwide. The first word in entertainment.
 			First word. Management. Financial portfolios. Insurance. Computers. Black leather gloves.
 			Research and development. Putting in the man-hours to study the science of what you need.
 			Last week we put Liquid Paper on a bee......and it died. Security. Security.
 			And... And. Possibly you. Possibly you.
 		</p>
+	
 		
 		
 	</body>
