--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
 	
 		<p>
 		
-			<img src="./Images/b&d.jpg" style="width: 250px;">
+			<img src="./Images/b&d.jpg" style="width: 250px; margin-left:100px;">
 		
 			Prestige Worldwide, wide, wide, wide. Prestige Worldwide. The first word in entertainment.
 			First word. Management. Financial portfolios. Insurance. Computers. Black leather gloves.
