--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
 		p
 		{
 			font-size:150%;
+			margin-left:350px;
 		}
 	</style>
 	<body>
@@ -41,11 +42,11 @@
 		</p>
 	
 			
-			<h1 style="color:black; font-size: 200%; margin-left:100px;">Prestige Worldwide Vision for the Future</h1>
+			<h1 style="color:black; font-size: 200%; margin-left:200px;">Prestige Worldwide Vision for the Future</h1>
 	
 		<p>
 		
-			<img src="./Images/b&d.jpg" style="width: 250px; margin-left:100px;">
+			<img src="./Images/b&d.jpg" style="width: 250px; margin-left:200px;">
 		
 			Prestige Worldwide, wide, wide, wide. Prestige Worldwide. The first word in entertainment.
 			First word. Management. Financial portfolios. Insurance. Computers. Black leather gloves.
