--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
 			<h1 style="color:black; font-size: 200%; margin-left:200px;">Prestige Worldwide Vision for the Future</h1>
 	
 		
-			<img src="./Images/b&d.jpg" style="width: 250px; margin-left:200px;">
+	<h2> <img src="./Images/b&d.jpg" style="width: 250px; margin-left:200px;"></h2>
 		
 		<p>
 		
