--- a/news.html
+++ b/news.html
@@ -55,6 +55,43 @@
 			<li><a href="contact.html">Contact</a></li>
 		</ul>	
 		</p>
+	<table style="width:25%">
+
+	<tbody>
+	<tr>
+  	</tr>
+	<tr>
+    	<td>	
+		<img src="./The Pug Life_files/donald-trump.jpg" style="width:200px; margin-top:25px;">
+	</td>
+   	<td style="font-size: 110%; padding-top: 10px;">Name:<br>Phone:<br>Email:
+	</td>
+    	<td style="padding-top: 5px;">Co-CEO<br style="padding-top: 30px;">867-5309<br>Dale_prestige@worldwide.com
+	</td>
+  	</tr>
+ 	<tr>
+    	<td style="font-size: 140%;">Dale Doback
+	</td>
+  	</tr>
+
+	<tr>
+    	<td>	
+		<img src="./The Pug Life_files/masterchief.jpg" style="width:200px; margin-top:25px;">
+	</td>
+	<td style="font-size: 110%; padding-top: 10px; padding-left: 12px;">Name:<br>Phone:<br>Email:
+	</td>
+	<td style="padding-top: 12px; padding-left: 12px;">Co-CEO<br>867-5309<br>Brennan_prestige@worldwide.com
+	</td>
+  	</tr>
+  	<tr>
+    	<td style="font-size: 140%;">Brennan Huff
+	</td>
+  	</tr>
+
+	
+
+
+</tbody></table>
 		
 		
 		
