--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,96 @@
+<!DOCTYPE html>        <!--this is an html comment; in fact this line tells the browser what type of doc it is-->
+<html>
+<head>
+	<title>Spencer's Super Rad Website</title>
+	<style>
+		table
+		{
+			margin-left: auto;
+			margin-right: auto;
+		}
+		
+		ul
+		{
+			list-style: none;
+			text-align:center;
+			font-size:250%;
+		}
+		
+		li
+		{
+			display:inline;
+			margin-left: 50px;
+			margin-right: 50px;
+			
+		}
+		header
+		{
+			text-align:center;
+			font-family:"helvetica";
+			color:blacks;
+			font-size:350%;
+			
+		}
+		
+		body
+		{
+			text-align:center;	
+		}
+		
+	</style>	
+	</head>
+	
+	<body>
+		
+	<header>
+	    Prestige Worldwide 
+	</header>
+		
+		
+		<p>
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="about.html">About</a></li>
+			<li><a href="news.html">News</a></li>
+			<li><a href="contact.html">Contact</a></li>
+		</ul>	
+		</p>
+  
+	  <tbody>
+    <tr>
+    <td>	
+      <img src="./The Pug Life_files/donald-trump.jpg" style="width:200px; margin-top:25px;">
+    </td>
+    <td style="font-size: 110%; padding-top: 10px;">Name:<br>Phone:<br>Email:
+    </td>
+    <td style="padding-top: 5px;">Brennan Huff<br style="padding-top: 30px;">867-5309<br>Brennan_prestige@worldwide.com
+    </td>
+    </tr>
+    <tr>
+    <td style="font-size: 140%;">Co-CEO
+    </td>
+    </tr>
 
+	  <tr>
+    <td>	
+      <img src="./The Pug Life_files/masterchief.jpg" style="width:200px; margin-top:25px;">
+     </td>
+		<td style="font-size: 110%; padding-top: 10px; padding-left: 12px;">Name:<br>Phone:<br>Email:
+    </td>
+		<td style="padding-top: 12px; padding-left: 12px;">Dale Doback<br>867-5309<br>Dale_prestige@worldewide.com
+    </td>
+    </tr>
+    <tr>
+    <td style="font-size: 140%;">Co-CEO</td>
+    </tr>
+
+	
+
+
+</tbody></table>	
+		
+		
+		
+		
+	</body>
+</html>
