--- a/contact.html
+++ b/contact.html
@@ -55,8 +55,9 @@
 			<li><a href="contact.html">Contact</a></li>
 		</ul>	
 		</p>
-  
-	  <tbody>
+	
+    <table style="width:25%">
+    <tbody>
     <tr>
     <td>	
       <img src="./The Pug Life_files/donald-trump.jpg" style="width:200px; margin-top:25px;">
@@ -74,10 +75,10 @@
 	  <tr>
     <td>	
       <img src="./The Pug Life_files/masterchief.jpg" style="width:200px; margin-top:25px;">
-     </td>
-		<td style="font-size: 110%; padding-top: 10px; padding-left: 12px;">Name:<br>Phone:<br>Email:
     </td>
-		<td style="padding-top: 12px; padding-left: 12px;">Dale Doback<br>867-5309<br>Dale_prestige@worldewide.com
+    <td style="font-size: 110%; padding-top: 10px; padding-left: 12px;">Name:<br>Phone:<br>Email:
+    </td>
+    <td style="padding-top: 12px; padding-left: 12px;">Dale Doback<br>867-5309<br>Dale_prestige@worldewide.com
     </td>
     </tr>
     <tr>
