--- a/contact.html
+++ b/contact.html
@@ -56,11 +56,11 @@
 		</ul>	
 		</p>
 	
-    <table style="width:25%">
-    <tbody>
+<table style="width:25%">
+<tbody>
     <tr>
     <td>	
-      <img src="./The Pug Life_files/donald-trump.jpg" style="width:200px; margin-top:25px;">
+      <img src="./Images/BH.jpg" style="width:200px; margin-top:25px;">
     </td>
     <td style="font-size: 110%; padding-top: 10px;">Name:<br>Phone:<br>Email:
     </td>
@@ -74,7 +74,7 @@
 
 	  <tr>
     <td>	
-      <img src="./The Pug Life_files/masterchief.jpg" style="width:200px; margin-top:25px;">
+      <img src="./Images/DD.jpg" style="width:200px; margin-top:25px;">
     </td>
     <td style="font-size: 110%; padding-top: 10px; padding-left: 12px;">Name:<br>Phone:<br>Email:
     </td>
@@ -88,7 +88,8 @@
 	
 
 
-</tbody></table>	
+</tbody>
+</table>	
 		
 		
 		
