--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
     </tr>
     <tr>
     <td>	
-      <img src="./Images/BH.jpg" style="width:200px; margin-top:5px;">
+      <img src="./Images/BH.jpg" style="width:200px; margin-top:5px; margin-bottom:40px;">
     </td>
     <td style="font-size: 110%; padding-top: 10px;">Name:<br>Phone:<br>Email:
     </td>
