--- a/about.html
+++ b/about.html
@@ -64,11 +64,11 @@
 <tbody><tr>
   </tr><tr>
     <td>	<img src="./Images/b&d.jpg" style="width:200px; margin-top:25px;"></td>
-    <td style="font-size: 110%; padding-top: 10px;"Prestige Worldwide, wide, wide, wide. Prestige Worldwide. The first word in entertainment.
+    <td style="font-size: 110%;">Prestige Worldwide, wide, wide, wide. Prestige Worldwide. The first word in entertainment.
 			First word. Management. Financial portfolios. Insurance. Computers. Black leather gloves.
 			Research and development. Putting in the man-hours to study the science of what you need.
 			Last week we put Liquid Paper on a bee......and it died. Security. Security.
-			And... And. Possibly you. Possibly you.></td>
+			And... And. Possibly you. Possibly you.</td>
     
   </tr>
 	</tbody></table>	
