--- a/about.html
+++ b/about.html
@@ -59,18 +59,14 @@
 		</p>
 		
 		
-	<table style="width:25%">
+	<table style="width:125%">
 
 	<tbody>
 		
 	<tr>
 		
         <td>	
-		<img src="./Images/b&d.jpg" alt="Prestige Worldwide, wide, wide, wide. Prestige Worldwide. The first word in 
-		                     entertainment. First word. Management. Financial portfolios. Insurance. 
-	                             Computers. Black leather gloves. Research and development. Putting in the 
-		                     man-hours to study the science of what you need. Last week we put Liquid 
-		                     Paper on a bee......and it died. Security. Security. And... And. Possibly you. Possibly you." 
+		<img src="./Images/b&d.jpg" 
 		     style="width:400px; margin-top:25px;">
 	</td>
         <td style="font-size: 110%;">Prestige Worldwide, wide, wide, wide. Prestige Worldwide. The first word in 
