--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
 			<h1 style="color:black; font-size: 200%; margin-left:200px;">Prestige Worldwide Vision for the Future</h1>
 	
 		
-			<h2> <img src="./Images/b&d.jpg" style="width: 250px; margin-left:200px;"></h2>
+		<!--	<h2> <img src="./Images/b&d.jpg" style="width: 250px; margin-left:200px;"></h2>
 		
 		<p>
 		
@@ -56,7 +56,7 @@
 			Research and development. Putting in the man-hours to study the science of what you need.
 			Last week we put Liquid Paper on a bee......and it died. Security. Security.
 			And... And. Possibly you. Possibly you.
-		</p>
+		</p>-->
 		
 		
 	<table style="width:80%">
