--- a/about.html
+++ b/about.html
@@ -28,8 +28,20 @@
 			font-size:150%;
 			margin-left:500px;
 		}
+		header
+		{
+			text-align:center;
+			font-family:"helvetica";
+			color:blacks;
+			font-size:350%;
+			
+		}
 	</style>
 	<body>
+		
+		<header>
+	    	Prestige Worldwide 
+		</header>
 		
 		
 		<p>
