--- a/news.html
+++ b/news.html
@@ -55,8 +55,30 @@
 			<li><a href="contact.html">Contact</a></li>
 		</ul>	
 		</p>
+	<table style="width:80%">
+
+	<tbody>
 		
+	<tr>
 		
+        <td>	
+		<img src="./Images/PW.jpg" 
+		style="width:300px; margin-top:25px;">
+	</td>
+        <td style="font-size: 150%;">While filming there first ever promotional video for Prestige Worldwide, wide, wide, wide. 
+		                     they made a bit of an error and allowed there fathers boat to steer itself into the shoreline 
+	                             thus destroying the boat for good. After talking to the Co-CEOS's and there promise to fix the  
+		                     boat we have this from the father of Dale Doback "They're jackaloons! Failures! Failures!" 
+		                     More to follow on this intense news update.
+	</td>
+    
+        </tr>
+		
+	</tbody>
+		
+	</table>
 	
-	</body>
+
+	
+</body>
 </html>
