--- a/news.html
+++ b/news.html
@@ -66,9 +66,10 @@
 		style="width:300px; margin-top:25px;">
 	</td>
         <td style="font-size: 150%;">While filming there first ever promotional video for Prestige Worldwide, wide, wide, wide. 
-		                     they made a bit of an error and allowed there fathers boat to steer itself into the shoreline 
-	                             thus destroying the boat for good. After talking to the Co-CEOS's and there promise to fix the  
-		                     boat we have this from the father of Dale Doback "They're jackaloons! Failures! Failures!" 
+		                     step-brothers Dale and Brennan made a bit of an error and allowed there fathers boat to 
+				     steer itself into the shoreline thus destroying the boat for good. After talking to the 
+		                     Co-CEOS's and there promise to fix the boat we have this from the father of Dale Doback 
+		                     "They're jackaloons! Failures! Failures!" 
 		                     More to follow on this intense news update, after more details of this crash come forth.
 	</td>
     
