--- a/news.html
+++ b/news.html
@@ -55,6 +55,9 @@
 			<li><a href="contact.html">Contact</a></li>
 		</ul>	
 		</p>
+	
+	<h1 style="color:black; font-size: 250%; margin-left:200px;">Epic Crash Off Coast of Altadena CA!</h1>
+	
 	<table style="width:80%">
 
 	<tbody>
@@ -78,6 +81,12 @@
 	</tbody>
 		
 	</table>
+	
+	<h2 style="color:black; font-size: 250%; margin-left:200px;">Catalina Wine Mixer</h2>
+	
+	<p>
+		
+	</p>
 	
 
 	
