--- a/news.html
+++ b/news.html
@@ -84,9 +84,30 @@
 	
 	<h2 style="color:black; font-size: 250%; margin-left:200px;">Catalina Wine Mixer</h2>
 	
-	<p>
+	<table style="width:80%">
+
+	<tbody>
 		
-	</p>
+	<tr>
+		
+        <td>	
+		<img src="./Images/CWM.jpg" 
+		style="width:300px; margin-top:25px;">
+	</td>
+        <td style="font-size: 150%;">Coming this weekend! the biggest helicopter-leasing event in the Western Hemisphere 
+				     since 1997! The Catalina Wine Mixer! Hosted by Brennan Huff recently hired and brother
+		                     to the vice-president of the helicopter leasing business Derek Huff, this years mixer 
+				     looks like it could be a big one for sales. This mixer could also be the big break that 
+		                     Brennan Huff was looking for as he looks to progress in the business, and at the same time 
+		                     not get fires. More about this event as the information is provided.
+		                     
+	</td>
+    
+        </tr>
+		
+	</tbody>
+		
+	</table>
 	
 
 	
