--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		
 		
 		<p>
-			<img src="./Images/you.jpg" style="width: 700px;">
+			<img src="./Images/PPW.jpg" style="width: 700px;">
 		</p>
 		
 		
