--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,11 @@
 <head><title>ThingSpeak Embedded Plot</title></head>
 <body>
 <iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/610709/charts/1?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&type=line&update=15"></iframe>
-</body>		
+</body>	
+<head><title>ThingSpeak Embedded Plot</title></head>
+<body>
+<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/610709/charts/2?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&type=line&update=15"></iframe>
+</body>	
 		
 </body>
 </html>
