--- a/contact.html
+++ b/contact.html
@@ -96,6 +96,11 @@
 <body>
 <iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/610709/charts/2?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&type=line&update=15"></iframe>
 </body>	
+	
+<body>
+	<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">The light level in my office is 51.8080 lux.</p>&mdash; Spencer King (@Spencer52036394) <a href="https://twitter.com/Spencer52036394/status/1055603147912159232?ref_src=twsrc%5Etfw">October 25, 2018</a></blockquote>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+</body>
 		
 </body>
 </html>
