--- a/contact.html
+++ b/contact.html
@@ -98,8 +98,7 @@
 <p>	
 	
 <p>
-	<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">The light level in my office is 51.8080 lux.</p>&mdash; Spencer King (@Spencer52036394) <a href="https://twitter.com/Spencer52036394/status/1055603147912159232?ref_src=twsrc%5Etfw">October 25, 2018</a></blockquote>
-<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+	<a class="twitter-timeline" href="https://twitter.com/Spencer52036394/with_replies">Tweets by Spencer52036394</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	</p>
 		
 </body>
