--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
 <p>	
 	
 <p>
-	<a class="twitter-timeline" href="https://twitter.com/Spencer52036394/with_replies">Tweets by Spencer52036394</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+	<a class="twitter-timeline" href="https://twitter.com/Spencer52036394">Tweets by Spencer52036394</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	</p>
 		
 </body>
